[workspace]
resolver = "2"

members = [
    "crates/fluent-cli",
    "crates/fluent-core",
    "crates/fluent-engines",
    "crates/fluent-storage",
    "crates/fluent-lambda",
]

[workspace.dependencies]
fluent-cli = { path = "crates/fluent-cli" }
fluent-core = { path = "crates/fluent-core" }
fluent-engines = { path = "crates/fluent-engines" }
fluent-storage = { path = "crates/fluent-storage" }
