[package]
name = "fluent"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
tokio-console = "0.1" # For debugging async tasks
config = "0.12"
log = "0.4"
env_logger = "0.9"
atty = "0.2.14"
amber = "0.2.0"
base64 = "0.21.7"
infer = "0.8.0"
pulldown-cmark = "0.9.0"
regex = "1.10.4"
termimad = "0.14"
serde_yaml = "0.9.34+deprecated"
chrono = "0.4.38"
anyhow = "1.0.68"
colored = "2.1.0"