[package]
name = "fluent"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.2"
clap_complete_fig = "4.5.0"
tokio-console = "0.1" # For debugging async tasks
config = "0.12"
log = "0.4"
env_logger = "0.9"
atty = "0.2.14"
amber = "0.2.0"
base64 = "0.22.1"
infer = "0.8.0"
pulldown-cmark = "0.9.0"
regex = "1.10.4"
termimad = "0.29.2"
chrono = "0.4.38"
anyhow = "1.0.68"
colored = "2.1.0"
tokio-util = "0.7.10"
thiserror = "1.0.58"
mime_guess = "2.0.4"
cross = "0.2.1"
indicatif = "0.17.8"
term_size = "1.0.0-beta1"
crossterm="0.25.0"
terminal_size = "0.3.0"
sanitize-filename = "0.5.0"


[dependencies.getrandom]
version = "0.2"
features = ["js"]