[package]
name = "fluent-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
assert_cmd = "2.0"
predicates = "3.0"
anyhow = "1.0"

[[test]]
name = "integration"
path = "integration/command_integration_tests.rs"
