[package]
name = "fluent-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-engines = { workspace = true }
fluent-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "stream"] }
clap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
rmcp = { workspace = true }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
which = { workspace = true }
# Enhanced MCP Protocol Support
tokio-tungstenite = { workspace = true }
url = { workspace = true }
# Performance Optimization
deadpool = { workspace = true }
moka = { workspace = true }
# Security and Sandboxing
nix = { workspace = true }
# Workflow Engine
petgraph = { workspace = true }
handlebars = { workspace = true }
# Metrics and Monitoring
metrics = { workspace = true }
prometheus = { workspace = true }
# Additional utilities
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

