[package]
name = "fluent-cli"
version = "0.1.0"
edition = "2021"
default-run = "fluent-cli"


[dependencies]
clap = { workspace = true, features = ["derive"] }
fluent-core = { workspace = true }
fluent-engines = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }

termimad = { workspace = true }
dialoguer = { workspace = true }

fluent-agent = { path = "../fluent-agent" }
rmcp = { workspace = true }

#fluent-storage = { path = "../fluent-storage" }  # is not used
#clap_complete = "4.5.1"  #is not used
#atty = "0.2.14" "use standard std::io::IsTerminal"
