[package]
name = "fluent-cli"
version = "0.1.0"
edition = "2021"
default-run = "fluent-cli"


[dependencies]
clap = { workspace = true, features = ["derive"] }
fluent-core = { workspace = true }
fluent-engines = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
glob = "0.3"

termimad = { workspace = true }
dialoguer = { workspace = true }

fluent-agent = { path = "../fluent-agent" }
rmcp = { workspace = true }
env_logger = { workspace = true }
chrono.workspace = true

[dev-dependencies]
tempfile = "3.8"
glob = "0.3"
