# crates/fluent-core/Cargo.toml
[package]
name = "fluent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.120"
async-trait = "0.1.80"
log = "0.4.22"
chrono = "0.4.38"
uuid = { version = "1.9.1", features = ["v4"] }
neo4rs = "0.7.1"
unicode-segmentation = "1.11.0"
rust-stemmers = "1.2.0"
stop-words = "0.8.0"
base64 = "0.22.1"
tokio = "1.39.2"
regex = "1.10.6"
url = "2.5.2"
termimad = "0.29.4"
syntect = "5.2.0"
owo-colors = "4.0.0"
pdf-extract = "0.7.7"


#rust-bert = {  version = "0.18.0"  }  #Is not used
#indicatif = "0.17.8"  #Is not used
#jetscii = "0.5.3"  #Is not used
#tokenizers = "0.19.1" #Is not used
