# crates/fluent-core/Cargo.toml
[package]
name = "fluent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
neo4rs = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
unicode-segmentation = { workspace = true }
rust-stemmers = { workspace = true }
stop-words = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
owo-colors = { workspace = true }
pdf-extract = { workspace = true }
sled = { workspace = true }
sha2 = { workspace = true }
which = "6.0"
