# crates/fluent-engines/Cargo.toml
[package]
name = "fluent-engines"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
strum = { workspace = true, features = ["derive"] }
