# crates/fluent-engines/Cargo.toml
[package]
name = "fluent-engines"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
strum = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["derive"] }
jsonschema = { workspace = true }
serde_yaml = { workspace = true }

libloading = { workspace = true }
once_cell = { workspace = true }
lru = "0.12"
lz4_flex = "0.11"
sha2 = "0.10"
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

