[package]
name = "fluent-lambda"
version = "0.1.0"
edition = "2021"


[dependencies]
fluent-core.workspace = true
fluent-engines.workspace = true
serde = { version = "1.0" }
lambda_runtime = "0.13.0"
serde_json = "1.0.122"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1", features = ["macros"] }
anyhow = "1.0.86"
strum = { version = "0.26.3", features = ["derive"] }
