[package]
name = "fluent-lambda"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }
fluent-core.workspace = true
fluent-engines.workspace = true
serde = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
