[package]
name = "fluent-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with the Fluent AI engine configurations"
license = "MIT"
repository = "https://github.com/njfio/fluent_cli"
readme = "../../README.md"
homepage = "https://fluentcli.com"


[dependencies]
tokio = { workspace = true, features = ["macros"] }
anyhow = { workspace = true }
fluent-core.workspace = true
fluent-engines.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
